--- a/package.json
+++ b/package.json
@@ -41,7 +41,12 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "axios": "^0.11.1",
+    "css-loader": "^0.23.1",
+    "lodash": "^4.12.0",
     "react": "^0.14.6",
-    "react-dom": "^0.14.6"
+    "react-bootstrap": "^0.29.4",
+    "react-dom": "^0.14.6",
+    "style-loader": "^0.13.1"
   }
 }
